# hexapod_simulation

./: .gitignore  README.md
reference/: pep-excel.xls
src/console_control/: CMakeLists.txt  package.xml  setup.py
src/console_control/launch/: control.launch
src/console_control/src/console_controller/: main.py
src/hexapod_control/: CMakeLists.txt  package.xml
src/hexapod_control/config/: hexapod_control.yaml
src/hexapod_control/launch/: simulation.launch
src/hexapod_description/: CMakeLists.txt  generate-urdf  package.xml
src/hexapod_description/urdf/: hexapod.urdf  hexapod.xacro  hexapod_urdf.xacro
src/hexapod_gazebo/: CMakeLists.txt  package.xml
src/hexapod_gazebo/launch/: simulation.launch
src/hexapod_interface/: CMakeLists.txt  package.xml
src/hexapod_interface/launch/: interface.launch
src/hexapod_interface/src/: interface.cpp
src/hexapod_msgs/: CMakeLists.txt  package.xml
src/hexapod_msgs/msg/: HexapodState.msg  Leg.msg
src/hexapod_steps/: CMakeLists.txt  package.xml
