<?xml version="1.0"?>
<package format="2">
  <name>hexapod_description</name>
  <version>1.0.0</version>
  <description>Provides an urdf file and meshes for the simulated hexapod. Meshes and offsets acquired from https://github.com/HumaRobotics/phantomx_description</description>


  <maintainer email="aramis.tanelus@gmail.com">Aramis Tanelus</maintainer>
  <author email="aramis.tanelus@gmail.com">Aramis Tanelus</author>


  <license>MIT</license>


  <url type="repository">https://github.com/Aramist/hexapod_simulation</url>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>joint_state_publisher</build_depend>
  <build_depend>robot_state_publisher</build_depend>
  <build_depend>xacro</build_depend>
  <build_export_depend>joint_state_publisher</build_export_depend>
  <build_export_depend>robot_state_publisher</build_export_depend>
  <build_export_depend>xacro</build_export_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>xacro</exec_depend>

</package>
