<?xml version="1.0"?>
<package format="2">
  <name>hexapod_gazebo</name>
  <version>1.0.0</version>
  <description>Provides a simulation of a hexapod robot with 3-DOF in each leg</description>


  <maintainer email="aramis.tanelus@gmail.com">Aramis Tanelus</maintainer>
  <author email="aramis.tanelus@gmail.com">Aramis Tanelus</author>


  <license>MIT</license>


  <url type="repository">https://github.com/Aramist/hexapod_simulation</url>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>gazebo_plugins</build_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>gazebo_ros_control</build_depend>
  <build_depend>hexapod_description</build_depend>
  <build_depend>xacro</build_depend>
  <build_export_depend>gazebo_plugins</build_export_depend>
  <build_export_depend>gazebo_ros</build_export_depend>
  <build_export_depend>gazebo_ros_control</build_export_depend>
  <build_export_depend>hexapod_description</build_export_depend>
  <build_export_depend>xacro</build_export_depend>
  <exec_depend>gazebo_plugins</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>gazebo_ros_control</exec_depend>
  <exec_depend>hexapod_description</exec_depend>
  <exec_depend>xacro</exec_depend>

</package>
