<?xml version="1.0"?>
<package format="2">
  <name>hexapod_msgs</name>
  <version>1.0.0</version>
  <description>Messages for interfacing with the simulated hexapod.</description>

  <maintainer email="aramis.tanelus@gmail.com">Aramis Tanelus</maintainer>
  <author email="aramis.tanelus@gmail.com">Aramis Tanelus</author>


  <license>MIT</license>

  <url type="repository">https://github.com/Aramist/hexapod_simulation</url>
  
  
  <buildtool_depend>catkin</buildtool_depend>
  <depend>message_runtime</depend>
  <build_depend>message_generation</build_depend>

</package>
